compiler/src/test/resources/golden/errors/suggest_field_access.dawn
type User = { name: String, age: Int }

fn f(u: User) -> String = u.nam
