compiler/src/test/resources/golden/errors/suggest_field_access.err
error: `User` has no field `nam`
  --> suggest_field_access.dawn:3:29
  |
3 | fn f(u: User) -> String = u.nam
  |                             ^^^
  = hint: did you mean `name`?
